--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,5 @@
 PORT = 3000
+JWT_SECRET=
 DB_HOST = "mongodb+srv://<DB_USER>:<DB_USER_PASS>@go-it.fqqeb.mongodb.net/<DB_NAME>?retryWrites=true&w=majority"
 DB_USER=
 DB_USER_PASS=
