--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.13",
+    "mongoose-paginate-v2": "^1.4.2",
     "morgan": "1.10.0",
     "uuid": "^8.3.2"
   },
