--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "4.17.1",
     "gravatar": "^1.8.2",
     "http-errors": "^1.8.1",
+    "jimp": "^0.16.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.4",
