--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose-paginate-v2": "^1.4.2",
     "morgan": "1.10.0",
     "multer": "^1.4.3",
+    "sha256": "^0.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
